[gd_scene load_steps=11 format=3 uid="uid://d1sxs5ucwt5cw"]

[ext_resource type="Script" uid="uid://djv7ewwf01a1e" path="res://level.gd" id="1_vonw3"]
[ext_resource type="Texture2D" uid="uid://io7ta4lowauo" path="res://Field_2.jpg" id="2_n6hdu"]
[ext_resource type="PackedScene" uid="uid://deu8jlcltfg5f" path="res://finish_line.tscn" id="2_oi3di"]
[ext_resource type="PackedScene" uid="uid://djrkl3l50j1u8" path="res://racer/snail.tscn" id="3_0b4ue"]
[ext_resource type="PackedScene" uid="uid://droahx1p02vyo" path="res://traps/strawberry.tscn" id="3_f2txt"]
[ext_resource type="Script" uid="uid://bew22gi0e2nxs" path="res://ui.gd" id="5_f2txt"]
[ext_resource type="PackedScene" uid="uid://eh8txnyk01aj" path="res://player_options/player_options.tscn" id="6_n6hdu"]
[ext_resource type="AudioStream" uid="uid://dm176lkokcqsd" path="res://audio/everybody-dance-airstream-main-version-41846-01-41-looped.mp3" id="8_km5ld"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oi3di"]
size = Vector2(24, 376)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ainy"]
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.72777236, 0.3263314, 0.25760457, 1)

[node name="Level" type="Node2D"]
script = ExtResource("1_vonw3")

[node name="Field1" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(196, 35.999996)
scale = Vector2(0.8161057, 0.81730765)
texture = ExtResource("2_n6hdu")

[node name="RaceTrack" type="Node2D" parent="."]
position = Vector2(174, 112)

[node name="TrapsSafeMargins" type="Node2D" parent="RaceTrack"]
unique_name_in_owner = true

[node name="Left" type="Marker2D" parent="RaceTrack/TrapsSafeMargins"]
position = Vector2(47, 50)

[node name="Right" type="Marker2D" parent="RaceTrack/TrapsSafeMargins"]
position = Vector2(334, 50)

[node name="Tracks" type="Node2D" parent="RaceTrack"]
unique_name_in_owner = true

[node name="Track1" type="Line2D" parent="RaceTrack/Tracks"]
position = Vector2(0, 3)
scale = Vector2(1, 1.3)
points = PackedVector2Array(0, 0, 400, 0)
default_color = Color(0.29803923, 0.22745098, 0.18039216, 1)

[node name="Track2" type="Line2D" parent="RaceTrack/Tracks"]
position = Vector2(0, 125)
scale = Vector2(1, 1.3)
points = PackedVector2Array(0, 0, 122.89734, 0, 400, 0)
default_color = Color(0.30588236, 0.23137255, 0.18431373, 1)

[node name="Track3" type="Line2D" parent="RaceTrack/Tracks"]
position = Vector2(0, 239)
scale = Vector2(1, 1.3)
points = PackedVector2Array(0, 0, 400, 0)
default_color = Color(0.29803923, 0.22745098, 0.18039216, 1)

[node name="FinishLine" parent="RaceTrack" instance=ExtResource("2_oi3di")]
z_index = 1
position = Vector2(370, 96)

[node name="FullStop" type="Area2D" parent="RaceTrack"]
position = Vector2(407, 0)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="RaceTrack/FullStop"]
position = Vector2(-1, 76)
shape = SubResource("RectangleShape2D_oi3di")

[node name="Traps" type="Node2D" parent="RaceTrack"]
unique_name_in_owner = true

[node name="Strawberry" parent="RaceTrack/Traps" instance=ExtResource("3_f2txt")]
position = Vector2(73, 3)

[node name="Strawberry3" parent="RaceTrack/Traps" instance=ExtResource("3_f2txt")]
position = Vector2(98, 236)

[node name="Strawberry2" parent="RaceTrack/Traps" instance=ExtResource("3_f2txt")]
position = Vector2(120, 120)

[node name="Strawberry5" parent="RaceTrack/Traps" instance=ExtResource("3_f2txt")]
position = Vector2(269, 124)

[node name="Strawberry4" parent="RaceTrack/Traps" instance=ExtResource("3_f2txt")]
position = Vector2(274, 234)

[node name="Strawberry6" parent="RaceTrack/Traps" instance=ExtResource("3_f2txt")]
position = Vector2(289, -3)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(193, 142)
zoom = Vector2(2.3, 2.3)

[node name="Racers" type="Node2D" parent="."]
position = Vector2(174, 112)

[node name="Snail" parent="Racers" instance=ExtResource("3_0b4ue")]
position = Vector2(16, 4)

[node name="Snail2" parent="Racers" instance=ExtResource("3_0b4ue")]
modulate = Color(0, 0.6429526, 0.9807605, 1)
position = Vector2(16, 126)

[node name="Snail3" parent="Racers" instance=ExtResource("3_0b4ue")]
modulate = Color(0.8407753, 0.2611684, 0, 1)
position = Vector2(16, 240)

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("5_f2txt")

[node name="GameOver" type="PanelContainer" parent="UI"]
z_index = 1
anchors_preset = -1
anchor_left = 0.321
anchor_top = 0.296
anchor_right = 0.68200004
anchor_bottom = 0.68200004
offset_left = -3.5697937
offset_top = 0.19200134
offset_right = 0.113708496
offset_bottom = 0.063964844
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOver"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="UI/GameOver/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 28
text = "Race over"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/GameOver/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="UI/GameOver/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "The winner is: "
horizontal_alignment = 1

[node name="Winner" type="Label" parent="UI/GameOver/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MoneyResultPlayer1" type="Label" parent="UI/GameOver/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
horizontal_alignment = 1

[node name="MoneyResultPlayer2" type="Label" parent="UI/GameOver/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOver/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Question" type="Label" parent="UI/GameOver/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "
Up for another round?"
horizontal_alignment = 1

[node name="NextRace" type="Button" parent="UI/GameOver/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "   It can't end in a loss   "

[node name="Restart" type="Button" parent="UI/GameOver/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Restart game"

[node name="Quit" type="Button" parent="UI/GameOver/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "   Nah man, I'm done   "

[node name="PlayerOptions" parent="UI" instance=ExtResource("6_n6hdu")]
anchor_left = 0.029000001
anchor_top = 0.47400004
anchor_right = 0.029000001
anchor_bottom = 0.70100003
offset_left = 0.3199997
offset_top = 0.079956055
offset_right = 432.32
offset_bottom = -0.08001709

[node name="PlayerOptions2" parent="UI" instance=ExtResource("6_n6hdu")]
anchor_left = 0.029000001
anchor_top = 0.71900004
anchor_right = 0.029000001
anchor_bottom = 0.94600004
offset_left = 0.3199997
offset_top = 0.32800293
offset_right = 432.32
offset_bottom = 0.16796875
theme_override_styles/panel = SubResource("StyleBoxFlat_1ainy")
player_name = "Player 2"

[node name="StartRace" type="Button" parent="UI"]
anchors_preset = -1
anchor_left = 0.029000001
anchor_top = 0.393
anchor_right = 0.029000001
anchor_bottom = 0.44200003
offset_left = 0.3199997
offset_top = -0.44000244
offset_right = 432.32
offset_bottom = -0.3600464
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "    RACE!    "

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_km5ld")
parameters/looping = true

[connection signal="body_entered" from="RaceTrack/FinishLine" to="." method="_on_finish_line_body_entered"]
[connection signal="body_entered" from="RaceTrack/FullStop" to="." method="_on_full_stop_body_entered"]
[connection signal="next_race_pressed" from="UI" to="." method="_on_ui_next_race_pressed"]
[connection signal="pressed" from="UI/GameOver/VBoxContainer/VBoxContainer/NextRace" to="UI" method="_on_next_race_pressed"]
[connection signal="pressed" from="UI/GameOver/VBoxContainer/VBoxContainer/Restart" to="UI" method="_on_restart_pressed"]
[connection signal="pressed" from="UI/GameOver/VBoxContainer/VBoxContainer/Quit" to="UI" method="_on_quit_pressed"]
[connection signal="place_trap" from="UI/PlayerOptions" to="." method="_on_player_options_place_trap"]
[connection signal="place_trap" from="UI/PlayerOptions2" to="." method="_on_player_options_place_trap"]
[connection signal="pressed" from="UI/StartRace" to="UI" method="_on_start_race_pressed"]
